objects/Subscription_Option__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is the descritpion that will display if the user expands the section for this subscription option.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Subscription_ID__c</fullName>
        <label>Legacy Subscription ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>This field does not drive any functionality.  It is for reference purposes only.</description>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Category__c</fullName>
        <inlineHelpText>Category Name -&gt; Adv.com Subscription Section Name
EMAIL_DAILY -&gt; News
EMAIL_TOPICS -&gt; Topic Alerts
EMAIL_WATCH -&gt; Product or Membership Email
EMAIL_BLOG -&gt; Blog Alerts</inlineHelpText>
        <label>Subscription Category</label>
        <picklist>
            <picklistValues>
                <fullName>EMAIL_DAILY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL_TOPICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL_WATCH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EMAIL_BLOG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Name_Ext__c</fullName>
        <label>Subscription Name Ext</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Subscription Option</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Subscription_Category__c</columns>
        <columns>Subscription_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Debug</fullName>
        <columns>NAME</columns>
        <columns>Site__c</columns>
        <columns>Subscription_Status__c</columns>
        <columns>Subscription_Category__c</columns>
        <columns>Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Legacy_Subscription_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>Debug</label>
    </listViews>
    <nameField>
        <label>Subscription Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>